--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.21.1",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@sentry/vite-plugin": "^2.22.4",
     "@tanstack/react-query": "^5.56.2",
     "@vitejs/plugin-legacy": "^5.4.2",
