--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "sass": "^1.78.0",
+    "swiper": "^11.1.14",
     "tailwindcss": "^3.4.11",
     "tw-elements": "^2.0.0"
   },
