--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -22,10 +22,13 @@
     "@vitejs/plugin-legacy": "^5.4.2",
     "antd": "^5.20.6",
     "browserslist-to-esbuild": "^2.1.1",
+    "clsx": "^2.1.1",
     "path": "^0.12.7",
     "rc-scrollbars": "^1.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
     "sass": "^1.78.0",
     "swiper": "^11.1.14",
