--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@vitejs/plugin-legacy": "^5.4.2",
     "antd": "^5.20.6",
+    "axios": "^1.7.7",
     "browserslist-to-esbuild": "^2.1.1",
     "clsx": "^2.1.1",
     "path": "^0.12.7",
@@ -33,7 +34,8 @@
     "sass": "^1.78.0",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.11",
-    "tw-elements": "^2.0.0"
+    "tw-elements": "^2.0.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
