--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -32,10 +32,11 @@
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
     "sass": "^1.78.0",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.11",
     "tw-elements": "^2.0.0",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
