--- a/computer_pt_fe/computer_pt_user/tsconfig.json
+++ b/computer_pt_fe/computer_pt_user/tsconfig.json
@@ -34,7 +34,8 @@
       "@/routers/*": ["src/routers/*"],
       "@/types/*": ["src/types/*"],
       "@/hooks/*": ["src/hooks/*"],
-      "@/layouts/*": ["src/layouts/*"]
+      "@/layouts/*": ["src/layouts/*"],
+      "@/stores/*": ["src/stores/*"]
     }
   },
   "include": [
