--- a/computer_pt_be/package.json
+++ b/computer_pt_be/package.json
@@ -12,19 +12,20 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.25.10",
-    "@strapi/plugin-users-permissions": "4.25.10",
-    "@strapi/plugin-i18n": "4.25.10",
+    "@_sh/strapi-plugin-ckeditor": "^2.1.1",
     "@strapi/plugin-cloud": "4.25.10",
+    "@strapi/plugin-color-picker": "^4.25.1",
+    "@strapi/plugin-documentation": "^4.25.1",
+    "@strapi/plugin-i18n": "4.25.10",
+    "@strapi/plugin-users-permissions": "4.25.10",
+    "@strapi/provider-email-nodemailer": "^4.25.3",
+    "@strapi/provider-upload-aws-s3": "^4.25.1",
+    "@strapi/strapi": "4.25.10",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
-    "@_sh/strapi-plugin-ckeditor": "^2.1.1",
-    "@strapi/plugin-color-picker": "^4.25.1",
-    "@strapi/plugin-documentation": "^4.25.1",
-    "@strapi/provider-email-nodemailer": "^4.25.3",
-    "@strapi/provider-upload-aws-s3": "^4.25.1",
+    "socket.io": "^4.8.1",
     "strapi-advanced-uuid": "^1.3.0",
     "strapi-plugin-meilisearch": "^0.12.0",
     "strapi-plugin-populate-deep": "^3.0.1",
