feat: add VNPAY

--- a/computer_pt_be/.env.example
+++ b/computer_pt_be/.env.example
@@ -6,7 +6,7 @@ ADMIN_JWT_SECRET=D7iHkeTsT7PeSl6EYbHMyg==
 TRANSFER_TOKEN_SALT=/M/5m/Y+chDdNf4WfEDKJw==
 # Database
 DATABASE_CLIENT=postgres
-DATABASE_HOST=103.167.150.102
+DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
 DATABASE_NAME=computer_pt_db
 DATABASE_USERNAME=computer_pt
@@ -17,3 +17,15 @@ MEILISEARCH_HOST=http://localhost:7702
 MEILISEARCH_API_KEY=masterKey
 
 TRANSPORT_FEE=35000
+
+
+# VNPAY
+VNP_TMN_CODE=093DELSR
+VNP_HASH_SECRET=YTLV9IMYRN1FOX7PQJG6ESJF5W5HQY4L
+VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_API=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+VNP_RETURN_URL=http://localhost:1337/api/vnpay_return
+
+# PAGE
+SUCCESS_PAGE=http://localhost:5173/order-success
+FAIL_PAGE=http://localhost:5173/order-fail
