--- a/computer_pt_be/package.json
+++ b/computer_pt_be/package.json
@@ -21,6 +21,7 @@
     "@strapi/provider-email-nodemailer": "^4.25.3",
     "@strapi/provider-upload-aws-s3": "^4.25.1",
     "@strapi/strapi": "4.25.10",
+    "moment-timezone": "^0.5.46",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
