--- a/cms_computer_pt/package.json
+++ b/cms_computer_pt/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "antd": "^5.22.1",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.28.0",
     "sonner": "^1.7.0"
   },
