--- a/cms_computer_pt/package.json
+++ b/cms_computer_pt/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "antd": "^5.22.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -18,7 +19,8 @@
     "react-hook-form": "^7.53.2",
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.28.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
