--- a/cms_computer_pt/package.json
+++ b/cms_computer_pt/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-react": "^9.3.1",
     "antd": "^5.22.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
