--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-number-format": "^5.4.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.26.2",
+    "react-simple-star-rating": "^5.1.7",
     "sass": "^1.78.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
