--- a/computer_pt_fe/computer_pt_user/package.json
+++ b/computer_pt_fe/computer_pt_user/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/icons": "^5.5.2",
     "@fontsource/roboto": "^5.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.26.2",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.78.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.11",
