--- a/cms_computer_pt/package.json
+++ b/cms_computer_pt/package.json
@@ -16,11 +16,14 @@
     "antd": "^5.22.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-number-format": "^5.4.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.0",
     "swr": "^2.2.5"
   },
